--- a/starter/app/src/main/res/layout/it_reminder.xml
+++ b/starter/app/src/main/res/layout/it_reminder.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
+            type="com.udacity.location_reminders.location_reminders.reminderslist.ReminderDataItem" />
     </data>
 
     <androidx.cardview.widget.CardView
