--- a/starter/app/src/debug/res/values/google_maps_api.xml
+++ b/starter/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,3 @@
 <resources>
-<!--    TODO: Before you run your application, you need a Google Maps API key.-->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBEwg4RfJTC_o8tXj6WS_LcPZgHY5qDR3A</string>
 </resources>
