--- a/starter/app/src/main/res/layout/activity_reminder_description.xml
+++ b/starter/app/src/main/res/layout/activity_reminder_description.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".location_reminders.ReminderDescriptionActivity">
-        <!--TODO: add the design of the reminder details-->
+        <!--DONE: add the design of the reminder details-->
 
         <TextView
             android:id="@+id/title"
