--- a/starter/app/src/main/res/layout/it_reminder.xml
+++ b/starter/app/src/main/res/layout/it_reminder.xml
@@ -14,6 +14,9 @@
         android:id="@+id/reminderCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
         android:layout_margin="@dimen/padding_medium"
         android:fadeVisible="@{true}">
 
@@ -22,40 +25,55 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/padding_medium">
 
-            <TextView
-                android:id="@+id/title"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/split_line"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_small"
-                android:layout_marginLeft="@dimen/padding_small"
-                android:text="@{item.title}"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_normal"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.4" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/split_line"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{item.title}"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_normal"
+                    tools:text="Title" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{item.description}"
+                    android:textSize="@dimen/text_size_small"
+                    tools:text="Description adlfa ldlaf ladsflla l slas d llasdf alsdla sldsa ld laadlasd ladlasdlad lads alasf la llasd las las sldflas dflas dllas dlas las dfllas lasd lasdf l" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/description"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{item.description}"
-                android:textSize="@dimen/text_size_small"
-                app:layout_constraintStart_toStartOf="@id/title"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                tools:text="Description" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@{item.location}"
+                android:layout_weight="2"
+                android:gravity="right"
+                android:text="@{@string/geofence_location_description(item.radius,item.location)}"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/text_size_small"
-                app:layout_constraintBottom_toBottomOf="@+id/description"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title"
-                tools:text="Location" />
+                app:layout_constraintStart_toEndOf="@id/split_line"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Location adlfa ldlaf ladsflla l slas d llasdf alsdla sldsa ld laadlasd ladlasdlad lads alasf la llasd las las sldflas dflas dllas dlas las dfllas lasd lasdf l" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
