Removed unused JobScheduler/Service. Worked some linter comments. Reorganized project folders.

--- a/starter/app/src/main/res/layout/activity_reminder_description.xml
+++ b/starter/app/src/main/res/layout/activity_reminder_description.xml
@@ -7,13 +7,13 @@
         <!--Data item that holds the reminder details-->
         <variable
             name="reminderDataItem"
-            type="com.udacity.location_reminders.location_reminders.reminderslist.ReminderDataItem" />
+            type="com.udacity.location_reminders.view.reminders_list.ReminderDataItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".location_reminders.ReminderDescriptionActivity">
+        tools:context=".view.ReminderDescriptionActivity">
         <!--DONE: add the design of the reminder details-->
 
         <TextView
