--- a/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -50,6 +50,7 @@
                 tools:text="@string/unknown_location" />
 
             <SeekBar
+                android:id="@+id/radiusSeekBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_small"
